--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Thumbs.db
 .env
 .env.*
 
+storage/postgres/
 # Migrations (optional – uncomment if you want to ignore)
 # */migrations/*.py
 # !*/migrations/__init__.py
