--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ Thumbs.db
 
 storage/postgres/
 # Migrations (optional – uncomment if you want to ignore)
-# */migrations/*.py
-# !*/migrations/__init__.py
+*/migrations/*.py
+!*/migrations/__init__.py
