--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ storage/postgres/
 # Migrations (optional – uncomment if you want to ignore)
 */migrations/*.py
 !*/migrations/__init__.py
+
+temp/
