--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ channels==4.2.0
 channels-redis
 charset-normalizer==3.4.4
 Django==4.2.27
+django-cors-headers==4.9.0
 djangorestframework==3.16.1
 drf-spectacular==0.29.0
 drf-spectacular-sidecar==2025.12.1
@@ -40,3 +41,4 @@ urllib3==2.5.0
 uvicorn[standard]==0.38.0
 websockets==15.0.1
 uvicorn==0.38.0
+corsheaders==4.9.0
